# reposcore-py

./: Makefile  README-template.md  README.md  calc_score.py  gh_service.py  main.py  output_writer.py  pyproject.toml
.devcontainer/: devcontainer.json
docs/: README.md  graphql-guide.md  python-guide.md
tests/: test_date_filter.py  test_gh_service.py  test_main_error_handling.py
tools/: update-docs-readme.py  update-synopsis.py
