[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reposcore-py"
version = "0.1.0"
description = "A CLI for scoring student participation in an open-source class repo, implemented in Python using GraphQL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
reposcore = "main:main"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
